# resume-roast

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
deployment/terraform/: data.tf  ecs.tf  main.tf  outputs.tf  variables.tf
frontend/: Dockerfile  app.py
scripts/: deploy.sh  dev.sh  s3-lifecycle.json
server/: Dockerfile  alembic.ini  config.py  database.py  main.py
server/agents/: __init__.py  advocate.py  critic.py  graph.py  realist.py
server/api/: __init__.py  dependencies.py  routes.py
server/core/: __init__.py  models.py  schemas.py
server/migrations/: env.py
server/migrations/versions/: 001_initial_schema.py  002_add_foreign_keys.py  003_fix_column_mismatches.py
server/repositories/: __init__.py  feedback_repository.py  resume_repository.py
server/services/: __init__.py  llm_service.py  pdf_service.py  s3_service.py
server/tests/: conftest.py  test_api.py  test_pdf_service.py  test_resume_repository.py
