[project]
name = "resume-roast"
version = "0.1.0"
description = "AI-powered resume critique platform with multi-agent debate system"
authors = [{ name = "Shaheryar Malik", email = "your.email@example.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115.0",
    "nicegui>=3.4.0",
    "openai>=1.50.0",
    "pypdf>=5.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "langgraph>=0.2.40",
    "langchain-openai>=0.2.10",
    "pydantic-settings>=2.6.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "W503", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["server"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.default.scripts]
test = "pytest server/tests/ -v"
test-cov = "pytest server/tests/ --cov=server --cov-report=term-missing"
lint = "ruff check server/"
format = "ruff format server/"
type-check = "python -m py_compile server/main.py server/config.py server/database.py"

[tool.ruff.isort]
known-first-party = ["resume_roast"]